# src/cmd/server/main.go
@@ -16,7 +16,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	_ "nhannguyen/gorest/docs"
-	v1Router "nhannguyen/gorest/internal/routes/v1"
+	"nhannguyen/gorest/internal/handlers"
 	_ "nhannguyen/gorest/pkg/logger"
 )
 
@@ -25,6 +25,9 @@ import (
 // @description This is a sample server for managing books.
 // @host localhost:8080
 // @BasePath /
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 
 func main() {
 	// Load env variables
@@ -45,33 +48,51 @@ func main() {
 
 func loadEnv() {
 	err := godotenv.Load("../../.env")
+
 	if err != nil {
 		logger.Fatalf("Failed to load environment file (.env): %v", err)
 		return
 	}
+
 	logger.Info("Environment file (.env) loaded successfully.")
 }
 
 func initApp(ginMode string) *gin.Engine {
 	gin.SetMode(ginMode)
 	app := gin.Default()
+
+	// Use middlewares
 	app.Use(cors.Default())
-	// /docs
+
+	// docs
 	app.GET("/api/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	// /api
-	appRouter := app.Group("/api")
+
+	// api
+	appRouter := app.Group("/api/v1")
 	{
-		// /api/v1/...
-		v1Router.Init(appRouter)
+		// Ping routes
+		pingRoutes := appRouter.Group("/ping")
+		{
+			pingRoutes.GET("", handlers.GetPing)
+		}
+		// Book routes
+		bookRoutes := appRouter.Group("/books")
+		{
+			bookRoutes.GET("", handlers.GetBooks)
+			bookRoutes.POST("", handlers.CreateBook)
+		}
 	}
-	// /
+
+	// root
 	app.GET("/", func(context *gin.Context) {
 		context.File("../../web/index.html")
 	})
-	// /404
+
+	// not-found
 	app.NoRoute(func(context *gin.Context) {
 		context.File("../../web/404.html")
 	})
+
 	return app
 }
 
@@ -80,7 +101,9 @@ func startServer(port string, app *gin.Engine) {
 		Addr:    ":" + port,
 		Handler: app,
 	}
+
 	logger.Infof("Server is starting on port %s...", port)
+
 	if err := server.ListenAndServe(); err != nil && err != http.ErrServerClosed {
 		logger.Fatalf("Failed to start server on port %s: %v", port, err)
 	}
