# src/docs/swagger.json
@@ -11,7 +11,15 @@
     "paths": {
         "/api/v1/books": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "get books",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -29,8 +37,14 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "create by JSON book",
                 "consumes": [
+                    "application/json",
                     "application/json"
                 ],
                 "produces": [
@@ -75,7 +89,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Ping"
+                            "$ref": "#/definitions/models.PingResponse"
                         }
                     }
                 }
@@ -123,7 +137,7 @@
                 }
             }
         },
-        "models.Ping": {
+        "models.PingResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -143,6 +157,13 @@
                     "example": true
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
