# src/internal/handlers/ping.go
@@ -5,20 +5,22 @@ import (
 
 	"github.com/gin-gonic/gin"
 
-	"nhannguyen/gorest/internal/routes/v1/models"
+	"nhannguyen/gorest/internal/models"
 )
 
 // GetPing godoc
 // @Summary Get ping
 // @Description Get ping
 // @Tags Utilities
+// @Security BearerAuth
+// @Accept  json
 // @Produce json
-// @Success 200 {object} models.Ping
+// @Success 200 {object} models.PingResponse
 // @Router /api/v1/ping [get]
 func GetPing(c *gin.Context) {
-	pong := models.Ping{
+	data := models.PingResponse{
 		Success: true,
 		Data:    "pong",
 	}
-	c.JSON(http.StatusOK, pong)
+	c.JSON(http.StatusOK, data)
 }
