# src/internal/models/ping.go
@@ -1,6 +1,6 @@
 package models
 
-type Ping struct {
+type PingResponse struct {
 	Success bool   `json:"success,omitempty" example:"true"`
 	Data    string `json:"data,omitempty" example:"pong"`
 	Error   bool   `json:"error,omitempty" example:"true"`
